# synth-timeseries

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  lint_and_test.yml  pre-commit.yml
notebooks/: synthetic_data_generator.ipynb
synth_timeseries/: __init__.py
synth_timeseries/data/: __init__.py
synth_timeseries/data/generator/: __init__.py  arima.py  cyclical.py  garch.py  gbm.py  levy.py  ornstein_uhlenbeck.py  run.py  sinusoid.py
tests/: conftest.py  test_package.py
tests/data/generator/: arima_test.py  cyclical_test.py  garch_process_test.py  gbm_test.py  gmb_test.py  levy_process_test.py  ou_process_test.py  sinusoid_test.py
